--- a/src/components/Pokemons.css
+++ b/src/components/Pokemons.css
@@ -11,8 +11,62 @@
   border: 1px black solid;
   width: 150px;
   height: 200px;
+
+  --background: linear-gradient(to left, #f7ba2b 0%, #ea5358 100%);
+  width: 190px;
+  height: 254px;
+  padding: 5px;
+  border-radius: 1rem;
+  overflow: visible;
+  background: #f7ba2b;
+  background: var(--background);
+  position: relative;
+  z-index: 1;
 }
 
-.h6 {
-  
+.poke-card::after {
+  position: absolute;
+  content: "";
+  top: 30px;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  transform: scale(0.8);
+  filter: blur(25px);
+  background: #f7ba2b;
+  background: var(--background);
+  transition: opacity 0.5s;
+}
+
+.poke-card-info {
+  --color: #181818;
+  background: var(--color);
+  color: var(--color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  overflow: visible;
+  border-radius: 0.7rem;
+}
+
+.poke-card .title {
+  font-weight: bold;
+  letter-spacing: 0.1em;
+}
+
+.poke-card:hover::after {
+  opacity: 0;
+}
+
+.poke-card:hover .card-info {
+  color: #f7ba2b;
+  transition: color 1s;
+}
+
+#h3 {
+  margin: 0px;
 }
